--- a/fields.html
+++ b/fields.html
@@ -3,7 +3,7 @@ layout: default
 title: Fields
 ---
 
-<h3>Attrbiutes</h3>
+<h3>Attributes</h3>
 <p>The following are global attrbiutes that can be added to any element.</p>
 <table class="table table-bordered">
     <thead>
