--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Home
 ---
 
-<p>Validatr relies on using modern HTML5 <a href="https://developer.mozilla.org/en-US/docs/HTML/Element/Input#Attributes" target="_blank">input attributes</a> to perform validation. Validatr will use native validation whereever possible, relying on a small piece of Modernizr to test for support. If an input type is not supported or a custom test is found Validatr will use it's own ruleset to supplement native validation. In either case, the validation message is displayed in a corss-browser manner allowing for customization.</p>
+<p>Validatr relies on using modern HTML5 <a href="https://developer.mozilla.org/en-US/docs/HTML/Element/Input#Attributes" target="_blank">input attributes</a> to perform validation. Validatr will use native validation whereever possible, relying on a small piece of Modernizr to test for support. If an input type is not supported or a custom test is found Validatr will use it's own ruleset to supplement native validation. In either case, the validation message is displayed in a cross-browser manner allowing for customization.</p>
 <div class="row">
     <div class="span4">
         <form action="./">
