--- a/tests/validatr.html
+++ b/tests/validatr.html
@@ -23,6 +23,7 @@
     <script src="tests_pattern.js"></script>
     <script src="tests_radio.js"></script>
     <script src="tests_url.js"></script>
+    <script src="tests_widget.js"></script>
 </head>
 <body>
     <div id="qunit"></div>
