--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,7 @@
     </style>
     <script src="../libs/jquery/jquery.js"></script>
     <script src="js/validatr.js"></script>
+    <script src="js/format.js"></script>
     <script>
     $(function () {
         $('form').validatr();
