--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
         <input type="submit" value="Submit">
     </form>
     <form action="./">
-        <div class="field"><label for="date">Date</label><input type="date" id="date" value="2013-03-19" min="2013-03-19" max="2013-03-21" step="2" name="date" required></div>
+        <div class="field"><label for="date">Date</label><input type="date" id="date" min="2013-03-19" max="2013-03-21" step="2" name="date" required></div>
         <input type="reset">
         <input type="submit" value="Submit">
     </form>
@@ -51,7 +51,7 @@
         <input type="submit" value="Submit">
     </form>
     <form action="./">
-        <div class="field"><label for="month">Month</label><input type="month" id="month" name="month" required></div>
+        <div class="field"><label for="month">Month</label><input type="month" id="month" min="2013-03" max="2013-03" name="month" required></div>
         <input type="reset">
         <input type="submit" value="Submit">
     </form>
